css/style.css
/* UNIVERSAL */
@keyframes bounce {
  0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
  40% {transform: translateY(-7px);} 
  60% {transform: translateY(-7px);} 
}
:root {
  --principal-color: #53341f;
  --primary-font: 'Lato', sans-serif;
  --secondary-font: 'Staatliches', cursive;
}
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  text-decoration: none;
  list-style: none;
  scroll-behavior: smooth;
}
html {
  font-size: 62.5%;
  font-family: var(--primary-font);
  background-color: rgb(245, 245, 245);
}
::-webkit-scrollbar {
  width: 15px;
  height: 15px;
}
::-webkit-scrollbar-track {
  background-color: black;
}
::-webkit-scrollbar-thumb {
  background-color: #8f6040;
  border-radius: 6px;
}
::-webkit-scrollbar-thumb:hover {
  background-color: var(--principal-color);
}
a {
  text-decoration: none;
}

/* HEADER */
header {
  height: 80px;
  background-color: black;
  font-size: 1.6rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-block-end: 4px solid #8f6040;
  font-family: var(--primary-font);
}
header img {
  width: 60px;
  margin-inline-start: 10px;
}
.header__button {
  background-color: #8f6040;
  width: 90px;
  height: 50px;
  border: 3px solid #53341f;
  border-radius: 10px;
  text-decoration: underline;
}
nav {
  width: 57%;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}
nav div {
  display: none;
}
nav a {
  color: white;
  display: flex;
  align-items: center;
  justify-content: center;
  text-decoration: underline;
  margin: 0 10px;
  height: 50px;
}

/* MAIN */
.main__company--container {
  width: 100%;
  height: 78vh;
  background-image: url("../resources/local.PNG");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.main__company--info {
  width: 290px;
  color: white;
  padding: 15px;
  border: 5px solid white;
  border-radius: 10px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-block-end: 30px;
}
.main__company--info h1 {
  font-size: 4rem;
  margin-block-end: 10px;
  font-family: var(--secondary-font);
}
.main__company--info p {
  font-size: 1.7rem;
  text-align: center;
  font-weight: 500;
}
.main__company--button {
  width: 190px;
  height: 60px;
  font-size: 1.6rem;
  background-color: #8f6040;
  border: 3px solid #53341f;
  border-radius: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
  color: white;
  margin-block-end: 30px;
  text-align: center;
  text-decoration: underline;
  animation: bounce 4s;
  animation-iteration-count: infinite;
}
.main__company--button img {
  width: 60px;
  margin-inline: 6px;
}
.main__company--button:hover {
  animation-play-state: paused;
}

.main__about--container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100%;
  height: fit-content;
}
.main__about--container h2 {
  margin-block-start: 30px;
  font-size: 2.4rem;
  text-transform: uppercase;
  padding: 10px;
  background-color: white;
  border-radius: 10px;
  box-shadow: 6px 6px 6px rgb(89 73 30 / 30%);
  font-family: var(--secondary-font);
  width: 180px;
  text-align: center;
  margin-block-end: 20px;
}
.main__about {
  width: 100%;
  height: 270px;
  display: flex;
  align-items: center;
  overflow-x: scroll;
  scroll-snap-type: x proximity;
  overflow-y: hidden;
  overscroll-behavior-x: contain;
}
.main__about::-webkit-scrollbar {
  display: none;
}
.main__about--card {
  scroll-snap-align: center;
  display: flex;
  align-items: center;
  flex-direction: column;
  min-width: 210px;
  max-width: 210px;
  height: 220px;
  background-color: white;
  box-shadow: 6px 6px 6px rgb(89 73 30 / 16%);
  margin-block-end: 20px;
  margin-inline: 8px;
  border-radius: 20px;
}
.main__about--description {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  padding: 20px;
}
.main__about--description h3{
  font-family: var(--primary-font);
  font-size: 1.8rem;
  margin-block-end: 10px;
}
.main__about--description p {
  font-size: 1.2rem;
}

.main__products--title {
  width: 100%;
  display: flex;
  justify-content: center;
}
.main__products--title h2 {
  margin-block-start: 30px;
  margin-block-end: 20px;
  font-size: 2.4rem;
  text-transform: uppercase;
  padding: 10px;
  background-color: white;
  border-radius: 10px;
  box-shadow: 6px 6px 6px rgb(89 73 30 / 30%);
  font-family: var(--secondary-font);
}

.main__samples {
  height: 270px;
  display: flex;
  align-items: center;
  overflow-x: scroll;
  overscroll-behavior-x: contain;
  scroll-snap-type: x proximity;
  overflow-y: hidden;
  background-color: rgb(245, 245, 245);
}
.main__samples::-webkit-scrollbar {
  display: none;
}
.main__samples--container {
  scroll-snap-align: center;
  min-width: 210px;
  height: 250px;
  margin: 0px 8px;
  display: flex;
  flex-direction: column;
  align-items: center;
  border-radius: 20px;
  background-color: white;
  box-shadow: 6px 6px 6px rgb(89 73 30 / 16%);
  text-align: center;
}
.main__samples--container .crunch-durazno {
  width: 100%;
  height: 150px;
  background-image: url("../resources/crunch-durazno.jpeg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
}
.main__samples--container .crunch-cereza {
  width: 100%;
  height: 150px;
  background-image: url("../resources/crunch_cereza.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
}
.main__samples--container .crunch-limon {
  width: 100%;
  height: 150px;
  background-image: url("../resources/crunch_limon.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
}
.main__samples--container .crunch-oreo {
  width: 100%;
  height: 150px;
  background-image: url("../resources/crunch_oreo.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
}
.main__samples--container .crunch-tentacion {
  width: 100%;
  height: 150px;
  background-image: url("../resources/crunch_tentacion.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
}
.main__samples--container .waffle-frutal {
  width: 100%;
  height: 150px;
  background-image: url("../resources/waffle_frutal.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
}
.main__samples--container .waffle-mora {
  width: 100%;
  height: 150px;
  background-image: url("../resources/waffle_mora.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
}
.main__samples--container h2 {
  margin-block-start: 15px;
  font-size: 1.8rem;
  padding: 0 10px;
}
.main__samples--container p {
  margin-block-start: 10px;
  font-size: 1.2rem;
  padding: 0 15px;
}

.main__contact--container {
  width: 100%;
  height: fit-content;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-block-end: 40px;
}
.main__contact--container h2 {
  margin-block-start: 30px;
  margin-block-end: 20px;
  font-size: 2.4rem;
  text-transform: uppercase;
  padding: 10px;
  background-color: white;
  border-radius: 10px;
  box-shadow: 6px 6px 6px rgb(89 73 30 / 30%);
  font-family: var(--secondary-font);
  width: 150px;
  text-align: center;
}
.main__contact {
  min-width: 150px;
  height: 150px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  box-shadow: 6px 6px 6px rgb(89 73 30 / 16%);
  border-radius: 20px;
  background-color: white;
  margin-block-end: 10px;
  color: black;
  transition: 500ms;
}
.main__contact--boxes {
  display: flex;
  flex-direction: column;
  align-items:  center;
}
.main__contact img {
  width: 60px;
  height: 60px;
  margin-block-end: 10px;
  margin-block-start: 10px;
}
.main__contact h3 {
  font-size: 1.5rem;
  margin-block-end: 5px;
  text-decoration: underline;
}
.main__contact p {
  font-size: 1.2rem;
  margin-block-end: 5px;
} 
.main__contact:hover {
  background-color: #dfc5b5;
  transform: scale(1.1);
}

/* FOOTER */
.footer__feedback {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 80px;
  background-color: #8f6040;
  font-size: 1.4rem;
}
.footer__feedback a {
  color: black;
  padding: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.footer__feedback span {
  margin-inline-start: 2px;
  color: rgb(6, 6, 131);
  font-weight: bold;
  text-decoration: underline;
}
.footer__feedback img {
  width: 40px;
  margin-inline-end: 5px;
}
.footer__info {
  width: 100%;
  height: 80px;
  background-color: black;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.4rem;
}
.footer__info a {
  color: white;
  min-width: 100%;
  min-height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: 500ms;
}
.footer__info a:hover {
  font-size: 1.5rem;
  text-decoration: underline;
}
.footer__info span {
  color: red;
  margin-inline-start: 5px;
  font-size: 1.6rem;
  font-weight: bold;
  text-decoration: underline;
}

